First commited as before_65514_rev1